overflow bug

--- a/app/components/Collapse.css
+++ b/app/components/Collapse.css
@@ -1,6 +1,7 @@
 .collapsible {
   width: 100%;
   background-color: transparent;
+  overflow-x: hidden;
 }
 
 .collapsible-button {
